NetBSD Problem Report #49560

From spz@tucana.1st.de  Mon Jan 12 20:22:08 2015
Return-Path: <spz@tucana.1st.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 530A5A5674
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 12 Jan 2015 20:22:08 +0000 (UTC)
Message-Id: <20150112202156.GA18822@tucana.1st.de>
Date: Mon, 12 Jan 2015 21:21:56 +0100
From: spz@tucana.1st.de
Reply-To: spz@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: panic at netbsd:linux_worker_intr+0xb8
X-Send-Pr-Version: 3.95

>Number:         49560
>Category:       kern
>Synopsis:       panic at netbsd:linux_worker_intr+0xb8
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    riastradh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jan 12 20:23:24 +0000 2015
>Closed-Date:    Fri Sep 30 07:47:48 +0000 2016
>Last-Modified:  Fri Sep 30 07:47:48 +0000 2016
>Originator:     S.P.Zeidler
>Release:        NetBSD 7.99.4 (20140101)
>Organization:
	dis-
>Environment:
System: NetBSD tucana.1st.de 7.99.4 NetBSD 7.99.4 (TUCANA) #106: Thu Jan 1 13:20:29 CET 2015 root@tucana.1st.de:/home/netbsd/amd64/kernobj/TUCANA amd64
Architecture: x86_64
Machine: amd64
>Description:
fatal page fault in supervisor mode
trap type 6 code 2 rip ffffffff8063d849 cs 8 rflags 10246 cr2 30 ilevel 8 rsp ff
fffe804000ff20
curlwp 0xfffffe811e144860 pid 0.5 lowest kstack 0xfffffe804000c2c0
linux_worker_intr() at netbsd:linux_worker_intr+0xb8
callout_softclock() at netbsd:callout_softclock+0x1d0
softint_dispatch() at netbsd:softint_dispatch+0xd3
DDB lost frame for netbsd:Xsoftintr+0x4f, trying 0xfffffe804000fff0
Xsoftintr() at netbsd:Xsoftintr+0x4f
--- interrupt ---
0:
fatal page fault in supervisor mode
trap type 6 code 0 rip ffffffff802b20d8 cs 8 rflags 10246 cr2 7f7ff6c3741c ilevel 8 rsp fffffe804000f380
curlwp 0xfffffe811e144860 pid 0.5 lowest kstack 0xfffffe804000c2c0
fatal page fault in supervisor mode
trap type 6 code 0 rip ffffffff802b20d8 cs 8 rflags 10246 cr2 7f7ff6c3741c ilevel 8 rsp fffffe804000f380
curlwp 0xfffffe811e144860 pid 0.5 lowest kstack 0xfffffe804000c2c0

>How-To-Repeat:
	I'd prefer not to :)
>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->riastradh
Responsible-Changed-By: riastradh@NetBSD.org
Responsible-Changed-When: Mon, 12 Jan 2015 20:25:31 +0000
Responsible-Changed-Why:
mine


From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49560 CVS commit: src/sys/external/bsd/drm2/linux
Date: Sun, 15 Nov 2015 22:56:25 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Sun Nov 15 22:56:24 UTC 2015

 Modified Files:
 	src/sys/external/bsd/drm2/linux: linux_work.c

 Log Message:
 Avoid NULL dereference in linux_worker_intr() in WORK_DELAYED_CANCELLED case.

 Potentially fixes PR#49560.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/external/bsd/drm2/linux/linux_work.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49560 CVS commit: [netbsd-7] src/sys/external/bsd/drm2/linux
Date: Thu, 11 Feb 2016 23:11:31 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Thu Feb 11 23:11:31 UTC 2016

 Modified Files:
 	src/sys/external/bsd/drm2/linux [netbsd-7]: linux_work.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #1086):
 	sys/external/bsd/drm2/linux/linux_work.c: revision 1.12
 Avoid NULL dereference in linux_worker_intr() in WORK_DELAYED_CANCELLED case.
 Potentially fixes PR#49560.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7.2.1 -r1.7.2.2 src/sys/external/bsd/drm2/linux/linux_work.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49560 CVS commit: [netbsd-7-0] src/sys/external/bsd/drm2/linux
Date: Thu, 11 Feb 2016 23:12:12 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Thu Feb 11 23:12:12 UTC 2016

 Modified Files:
 	src/sys/external/bsd/drm2/linux [netbsd-7-0]: linux_work.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #1086):
 	sys/external/bsd/drm2/linux/linux_work.c: revision 1.12
 Avoid NULL dereference in linux_worker_intr() in WORK_DELAYED_CANCELLED case.
 Potentially fixes PR#49560.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7.2.1 -r1.7.2.1.2.1 \
     src/sys/external/bsd/drm2/linux/linux_work.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 15 Feb 2016 09:38:22 +0000
State-Changed-Why:
fixed?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 30 Sep 2016 07:47:48 +0000
State-Changed-Why:
no feedback is good feedback


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.